# cli_notes

./: Cargo.toml  README.md
.cli_notes_storage/: db
src/: lib.rs  main.rs
src/cli/: command_executor.rs  command_parser.rs  mod.rs
src/core/: mod.rs
src/core/domain/: note.rs
src/core/infrastracture/: mod.rs
src/core/infrastracture/notes_repository/: notes_repository.rs
