[package]
name = "cli_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = "0.24.0"
chrono = { version = "0.4.0", features = ["rkyv"] }
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6.9"
rand = "0.8.5"
